Fixed about page z-index

--- a/src/styling/About.css
+++ b/src/styling/About.css
@@ -2,6 +2,7 @@
   min-height: 60vh;
   position: relative;
   background-color: #f8f9fa;
+  z-index: 1;
 }
 
 section {
